--- a/src/public/resources/css/ZXN0aWxvIGRvIHNpdGUgdGFpbHdpbmQtY29uZmln.css
+++ b/src/public/resources/css/ZXN0aWxvIGRvIHNpdGUgdGFpbHdpbmQtY29uZmln.css
@@ -30,7 +30,7 @@
 
 @layer components {
     .muted {
-        @apply text-text-muted;
+        @apply text-text-muted hover:text-white/80 transition duration-250 ease-in-out;
     }
 
     .card {
@@ -50,5 +50,25 @@
 
     .btn-primary {
         @apply cursor-pointer px-6 py-3 rounded font-semibold bg-blue-500 hover:bg-blue-700;
+    }
+}
+
+
+.animated-background {
+    background-size: 400%;
+
+    -webkit-animation: animation 15s ease infinite;
+    -moz-animation: animation 15s ease infinite;
+    animation: animation 15s ease infinite;
+}
+
+@keyframes animation {
+    0%,
+    100% {
+        background-position: 0% 50%;
+    }
+    
+    50% {
+        background-position: 100% 50%;
     }
 }
